[package]
name = "tarifuzzer"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
structopt = "0.3.16"
thiserror = "1.0.20"
anyhow = "1.0.32"
once_cell = "1.4.1"
log = "0.4.11"
proptest = "0.10.1"
hex = "0.4.2"
lazy_static = "1.4.0"
cargo_metadata = "0.11.1"
regex = "1.3.9"

#fuzz_target
fuzz_targets = { path = "./fuzz_targets", default-features = false }
env_logger = "0.7.1"


[workspace]
